[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "simulation_server"
version = "0.0.1"
requires-python = ">=3.9"
description = "ExaDigiT Simulation Server"
readme = "README.md"
# license = {file = "LICENSE.txt"}

dependencies = [
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1 ",
    "loguru==0.7.2",
    "SQLAlchemy==2.0.27",
    "pydruid==0.6.6",
    "PyYAML==6.0.1",
    "kafka-python==2.0.2",
    "python-snappy==0.6.1",
    "jsonpath-ng==1.6.1",
    "fastapi==0.108.0",
    "gunicorn==21.2.0",
    "uvicorn==0.27.1",
    "sqlparse==0.5.1",
    "kubernetes==29.0.0",
    "matplotlib==3.7.2",
    "numpy==1.23.5",
    "rich==13.6.0",
    "fmpy==0.3.19",
    "pandas==2.0.3",
    "scipy==1.10.1",
    "pyarrow==15.0.1",
    "uncertainties==3.2.1",
    "ClusterShell==1.9.2", 
    "elasticsearch==7.13.4",
    "elasticsearch-dbapi==0.2.11",
    "tqdm==4.66.5",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

 